  - improved GetNumberPlans() function (alec)
  - removed unused GetNumberPlans() function calls in cash receipts 
    interface (alec)
  - increased speed of customer searching with choosecustomer.php (alec)
  - added tariffs list sorting (alec)
  - added tariffs types: hosting, internet, service, other (alec)
  - lmsd/tc-ng: optimized sql query (alec)
  - lmsd/pinger: added option 'use_secure_function' (alec)
  - lmsd: fixed db_exec() function in postgresql's drivers, now is possible to
    use that function for queries like "SELECT some_function()" (alec)
  
version 1.11.0 Thoth (2007-08-17):

  - common pdf functions and initialization moved to lib/pdf.php (alec)
  - lms-reminder: BTS#0000670 - fixed query (alec)
  - Excluded groups - possibility to disable user access to specified
    customers groups (alec)
    *****************************************************************
  - PostgreSQL 8.1 is required now (alec)
	!!!! postgresql.conf: custom_variable_classes = 'lms'
    *****************************************************************
  - cash import: when customer is known don't show selection field,
    added $modvalue configuration variable, code cleanup, transactions
    support (alec)
  - when customer wasn't found in quick customer search do redirect to 
    customer search module with filled zip and city fields  (alec)
  - fixed few problems with apostrophe sign in tariffs names (alec)
  - optimized query speed of cash registries list (alec)
  - access rights: added 'customers group management' privilage (alec)
  - lmsd/payments: added %month and %year variables for comment (alec)
  - cash receipts: BTS#0000673 - cash receipts of type 'other' and
    'advance' included in balance sheet (alec)
  - customers list: fixed sorting by balance when balance is NULL 
    (customers without cash operations) (alec)
  - added transactions for deleting (customer, node, etc.) 
    operations (alec)
  - tariffs: fixed data limit feature (alec)    
